--- a/JAVA-TERMINAL/.vscode/launch.json
+++ b/JAVA-TERMINAL/.vscode/launch.json
@@ -4,17 +4,12 @@
     // Para obter mais informações, acesse: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        //     {
-        //     "type": "java",
-        //     "request": "launch",
-        //     "name": "MinhaClasse",
-        //     "mainClass": "AboutMe",
-        //     "args": [
-        //         "GLEYSON",
-        //         "OLIVEIRA",
-        //         "32",
-        //         "1.70"
-        //     ]
-        // }
+        {
+            "type": "java",
+            "name": "AboutMe",
+            "request": "launch",
+            "mainClass": "AboutMe",
+            "projectName": "JAVA-TERMINAL_de0a8ed8"
+        }
     ]
 }
